[aliases]
test=pytest

[metadata]
name = gbmgeometry
description = Geometry calculations for Fermi GBM
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grburgess/gbmgeometry
author_email = jmichaelburgess@gmail.com
author = J. Michael Burgess
requires_python = >=2.7.0


project_urls =
    Bug Tracker = https://github.com/grburgess/gbmgeometry/issues
    Source Code = https://github.com/grburgess/gbmgeometry


[options]
packages = find:
install_requires =
    astropy
    numpy	
    matplotlib
    sympy
    healpy
    spherical_geometry   
    h5py
    ipyvolume>=0.6.0a2
    numba
    
tests_require =
    pytest
    pytest-codecov



[versioneer]
VCS=git
style=pep440
versionfile_source=gbmgeometry/_version.py
versionfile_build=gbmgeometry/_version.py
tag_prefix=v
parentdir_prefix=gbmgeometry-
